# walnut

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
examples/: CMakeLists.txt  bottom_top_check.cpp  bsp_visualization.cpp  bsp_visualization.h  cube_tree.cpp  kerf_effect.cpp  kerf_effect1.cpp  kerf_effect2.cpp  min_max_check.cpp  normals_actor.cpp  normals_actor.h  observer_registration.cpp  points_actor.h  r_transformation_effect.cpp  redundant_faces.cpp  self_intersection.cpp  simple_entrance.cpp  split_before_after_crossing.cpp  union.cpp  visualization_window.cpp  visualization_window.h  vtkWalnutBooleanFilter.h  vtk_to_walnut_mesh.h  walnut_to_vtk_mesh.h  zig_zag_border.cpp
include/walnut/: aabb.h  aabb_convex_polygon.h  assignable_wrapper.h  big_int.h  big_int_base.h  big_int_impl.h  big_int_words.h  big_uint.h  big_uint_word.h  boolean_operation_filter.h  bsp_content_info.h  bsp_edge_info.h  bsp_node.h  bsp_polygon.h  bsp_traverser.h  bsp_tree.h  bsp_visitor.h  concat_range.h  connected_polygon.h  connecting_visitor.h  convex_polygon.h  convex_polygon_edge.h  convex_polygon_factory.h  convex_polygon_split_info.h  convex_polygon_vertex_iterator.h  convex_vertex_aabb_tracker.h  deed.h  double.h  double_point3.h  edge_info_root.h  edge_line_connector.h  extrude.h  greatest_angle_tracker.h  half_space2.h  half_space2_sideless_compare.h  half_space3.h  homo_point2.h  homo_point3.h  m_log_n_estimator.h  member_forward.h  (+37 more)
src/walnut/: aabb.cpp  big_int.cpp  convex_polygon_split_info.cpp  double_point3.cpp  extrude.cpp  half_space2.cpp  half_space3.cpp  homo_point3.cpp  m_log_n_estimator.cpp  mesh_plane_repairer.cpp  nudging_plane_builder.cpp  plucker_line.cpp  point3.cpp  r_transformation.cpp  vector3.cpp
test/: aabb_convex_polygon_test.cpp  aabb_test.cpp  assignable_wrapper_test.cpp  big_int_test.cpp  big_int_words_test.cpp  big_uint_test.cpp  big_uint_word_test.cpp  bsp_node_test.cpp  bsp_polygon_test.cpp  bsp_traverser_test.cpp  bsp_tree_pwn_test.cpp  bsp_tree_test.cpp  concat_range_test.cpp  connected_polygon_test.cpp  convex_polygon_factory_test.cpp  convex_polygon_split_info_test.cpp  convex_polygon_test.cpp  convex_polygon_vertex_iterator_test.cpp  convex_vertex_aabb_tracker_test.cpp  deed_test.cpp  double_test.cpp  edge_line_connector_test.cpp  extrude_test.cpp  greatest_angle_tracker_test.cpp  half_space2_sideless_compare_test.cpp  half_space2_test.cpp  half_space3_test.cpp  homo_point3_test.cpp  m_log_n_estimator_test.cpp  member_forward_test.cpp  mesh_plane_repairer_test.cpp  mesh_test.cpp  monotone_decomposer_test.cpp  monotone_range_test.cpp  monotone_triangulator_test.cpp  n_log_n_estimator_test.cpp  nudging_plane_builder_test.cpp  orienting_monotone_decomposer_test.cpp  planar_range_test.cpp  plane_partitioner_test.cpp  (+19 more)
visualizations/: CMakeLists.txt  corner_cell_boundary.cpp  extrusion.cpp  extrusion.cxx  function_command.h  mesh_adapter.h  normals_actor.cpp  normals_actor.h  observer_registration.cpp  observer_registration.h  points_actor.cpp  points_actor.h  render.h  union.cpp  visualization_window.cpp  visualization_window.h  vtkWalnutBooleanFilter.h  zig_zag_border.cpp
vtk_interface/: CMakeLists.txt
vtk_interface/include/walnut/: vtkWalnutBooleanFilter.h  vtk_to_walnut_mesh.h  walnut_to_vtk_mesh.h
vtk_interface/src/: vtkWalnutBooleanFilter.cpp
